crates/pluresdb-px/tests/conformance_corpus/invalid/03_unknown_severity_value.px
constraint invalid_severity:
  when: ok == true
  require: done == true
  severity: fatal
